Fixed getCartTotal placement Added spacing for terms-agreement block Updated review order sidebar

--- a/Website/frontend/assets/css/_sass/partials/_enrollment.scss
+++ b/Website/frontend/assets/css/_sass/partials/_enrollment.scss
@@ -793,6 +793,10 @@ $enrollment-module-vertical-padding: 20px;
         }
     }
 
+    .terms-agreement {
+        margin-bottom: 20px;
+    }
+
     .verify-order-table {
         .sub-charge { 
             padding-left: 30px;
